@@ -1,3 +1,12 @@
+2021-07-31  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        [JSC] Move JIT_UNICODE_EXPRESSIONS to ENABLE(YARR_JIT_UNICODE_EXPRESSIONS) in PlatformEnable.h
+        https://bugs.webkit.org/show_bug.cgi?id=228669
+
+        Reviewed by Alexey Shvayka.
+
+        * wtf/PlatformEnable.h:
+
 2021-07-30  Rob Buis  <rbuis@igalia.com>
 
         [css-overflow] Implement clip value for overflow
